@@ -1,13 +1,13 @@
 TODO
 
-2015-01-01 (nb)
+2015-01 (nb)
 
-- Implement and start using these functions: max7219s_buffer_set, max7219s_buffer_clr. [x]
+- (done) Implement and start using these functions: max7219s_buffer_set, max7219s_buffer_clr.
 
 
-2014-07-20 (nb)
+2014-07 (nb)
 
 - Implement power saving mode
 - Optimize refresh rate in the scheduled library.
-- Make all functions in lower case.	[x]
+- (done) Make all functions in lower case.
 
